website/static/website/css/gsdk.css
/* ... */
  .navbar:not(.navbar-transparent) .alert {
    top: 70px; }

.alert-info {
  background-color: rgba(91, 202, 255, 0.98); }

.alert-success {
  background-color: rgba(76, 217, 100, 0.98); }

.alert-warning {
  background-color: rgba(255, 149, 0, 0.98); }

.alert-danger {
  background-color: rgba(255, 76, 64, 0.98); }

/*           Labels & Progress-bar              */
.label {
  padding: 0.2em 0.6em 0.2em;
  border: 1px solid #999999;
  border-radius: 3px;
  color: #999999;
  background-color: #FFFFFF;
  font-weight: 500;
  font-size: 11px;
  text-transform: uppercase;
  display: inline-block;
  margin-bottom: 3px; }

.label-primary {
  border-color: #3472F7;
  color: #3472F7; }

.label-info {
  border-color: #2CA8FF;
  color: #2CA8FF; }

.label-success {
  border-color: #05AE0E;
  color: #05AE0E; }

.label-warning {
  border-color: #FF9500;
  color: #FF9500; }

.label-danger {
  border-color: #FF3B30;
  color: #FF3B30; }

.label.label-fill {
  color: #FFFFFF; }

.label-primary.label-fill, .progress-bar, .progress-bar-primary {
  background-color: #3472F7; }

.label-info.label-fill, .progress-bar-info {
  background-color: #2CA8FF; }

.label-success.label-fill, .progress-bar-success {
  background-color: #05AE0E; }

.label-warning.label-fill, .progress-bar-warning {
  background-color: #FF9500; }

.label-danger.label-fill, .progress-bar-danger {
  background-color: #FF3B30; }

.label-default.label-fill {
  background-color: #999999; }

.progress {
  background-color: #E5E5E5;
  border-radius: 3px;
  box-shadow: none;
  height: 4px; }

.progress-thin {
  height: 2px; }

.tooltip {
  font-size: 14px;
  font-weight: 600; }
  .tooltip.top {
    margin-top: -11px;
    padding: 0; }
  .tooltip.top .tooltip-inner:after {
    border-top: 11px solid #FAE6A4;
    border-left: 11px solid transparent;
    border-right: 11px solid transparent;
    bottom: -10px; }
  .tooltip.top .tooltip-inner:before {
    border-top: 11px solid rgba(0, 0, 0, 0.2);
    border-left: 11px solid transparent;
    border-right: 11px solid transparent;
    bottom: -11px; }
  .tooltip.bottom {
    margin-top: 11px;
    padding: 0; }
  .tooltip.bottom .tooltip-inner:after {
    border-bottom: 11px solid #FAE6A4;
    border-left: 11px solid transparent;
    border-right: 11px solid transparent;
    top: -10px; }
  .tooltip.bottom .tooltip-inner:before {
    border-bottom: 11px solid rgba(0, 0, 0, 0.2);
    border-left: 11px solid transparent;
    border-right: 11px solid transparent;
    top: -11px; }
  .tooltip.left {
    margin-left: -11px;
    padding: 0; }
  .tooltip.left .tooltip-inner:after {
    border-left: 11px solid #FAE6A4;
    border-top: 11px solid transparent;
    border-bottom: 11px solid transparent;
    right: -10px;
    left: auto;
    margin-left: 0; }
  .tooltip.left .tooltip-inner:before {
    border-left: 11px solid rgba(0, 0, 0, 0.2);
    border-top: 11px solid transparent;
    border-bottom: 11px solid transparent;
    right: -11px;
    left: auto;
    margin-left: 0; }
  .tooltip.right {
    margin-left: 11px;
    padding: 0; }
  .tooltip.right .tooltip-inner:after {
    border-right: 11px solid #FAE6A4;
    border-top: 11px solid transparent;
    border-bottom: 11px solid transparent;
    left: -10px;
    top: 0;
    margin-left: 0; }
  .tooltip.right .tooltip-inner:before {
    border-right: 11px solid rgba(0, 0, 0, 0.2);
    border-top: 11px solid transparent;
    border-bottom: 11px solid transparent;
    left: -11px;
    top: 0;
    margin-left: 0; }

.tooltip-arrow {
  display: none;
  opacity: 0; }

.tooltip-inner {
  background-color: #FAE6A4;
  border-radius: 4px;
  box-shadow: 0 1px 13px rgba(0, 0, 0, 0.14), 0 0 0 1px rgba(115, 71, 38, 0.23);
  color: #734726;
  max-width: 260px;
  min-width: 86px;
  padding: 6px 10px;
  text-align: center;
  text-decoration: none; }

.tooltip-inner:after {
  content: "";
  display: inline-block;
  left: 100%;
  margin-left: -60%;
  position: absolute; }

.tooltip-inner:before {
  content: "";
  display: inline-block;
  left: 100%;
  margin-left: -60%;
  position: absolute; }

/*      Checkbox and radio         */
.checkbox,
.radio {
  margin-bottom: 12px;
  padding-left: 32px;
  position: relative;
  -webkit-transition: color 0.25s linear;
  transition: color 0.25s linear;
  font-size: 14px;
  font-weight: normal;
  line-height: 1.5;
  color: #333333; }

.checkbox input,
.radio input {
  outline: none !important;
  display: none; }

.checkbox .icons,
.radio .icons {
  color: #DDDDDD;
  display: block;
  height: 20px;
  left: 0;
  position: absolute;
  top: 0;
  width: 20px;
  text-align: center;
  line-height: 21px;
  font-size: 20px;
  cursor: pointer;
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear; }

.checkbox .icons .first-icon,
.radio .icons .first-icon,
.checkbox .icons .second-icon,
.radio .icons .second-icon {
  display: inline-table;
  position: absolute;
  left: 0;
  top: 0;
  background-color: transparent;
  margin: 0;
  opacity: 1;
  filter: alpha(opacity=100); }

.checkbox .icons .second-icon,
.radio .icons .second-icon {
  opacity: 0;
  filter: alpha(opacity=0); }

.checkbox:hover,
.radio:hover {
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear; }

.checkbox:hover .first-icon,
.radio:hover .first-icon {
  opacity: 0;
  filter: alpha(opacity=0); }

.checkbox:hover .second-icon,
.radio:hover .second-icon {
  opacity: 1;
  filter: alpha(opacity=100); }

.checkbox.checked,
.radio.checked {
  color: #2CA8FF; }

.checkbox.checked .first-icon,
.radio.checked .first-icon {
  opacity: 0;
  filter: alpha(opacity=0); }

.checkbox.checked .second-icon,
.radio.checked .second-icon {
  opacity: 1;
  filter: alpha(opacity=100);
  color: #2CA8FF;
  -webkit-transition: color 0.2s linear;
  transition: color 0.2s linear; }

.checkbox.disabled,
.radio.disabled {
  cursor: default;
  color: #DDDDDD !important; }

.checkbox.disabled .icons,
.radio.disabled .icons {
  color: #DDDDDD !important; }
/* ... */

